cambios con capitulo 4 y 5 incompletos

--- a/capitulo2/marcoteorico.tex
+++ b/capitulo2/marcoteorico.tex
@@ -569,7 +569,7 @@ Para mostrar la forma en la que se ejecuta el algoritmo C4.5 y los pasos que se 
 \end{UClist}
 
 \newpage
-\section{Algoritmo KNN (K-Nearest Neighbors)}
+\section{Algoritmo KNN (K-Nearest Neighbors)}\label{knnmarco}
 
 El algoritmo KNN es un algoritmo de aprendizaje no supervisado en el que se busca clasificar un punto en una categoría con la ayuda de un conjunto de entrenamiento \cite{KNN}. Las siglas \textbf{KNN} en inglés hacen alusión a \textbf{K-Nearest Neighbors}, que significa K vecinos más cercanos. Este algoritmo calcula distancias euclidianas entre valores que son tomados como puntos. \textbf{KNN} estará implementado en \emph{Luminus}, ya que para el caso de estudio que se presentará, será necesario conocer cuáles son las tiendas más cercanas a la ubicación desde donde se esté utilizando el sistema.\\
 
