--- a/capitulo7/trabajoafuturo.tex
+++ b/capitulo7/trabajoafuturo.tex
@@ -30,7 +30,7 @@ Cabe señalar que además de estas propuestas existen muchas otras que pueden ad
 \\
 Las propuestas que aquí se señalan son ideas que se encontraron durante el desarrollo del proyecto y que se considera pueden contribuir en gran medida al mismo tomando en cuenta los objetivos que se establecieron.\\
 Se tiene ademas una propuesta general que puede ser aplicada para varios de los puntos anteriormente mencionados y además se trata de una forma diferente de visualizar el proyecto.\\
-\subsubsection{Una manera de presentarlo de forma diferente: Sitio web}
+\subsubsection{Una manera de presentarlo de forma diferente: Sitio web}\label{sitioweb}
 Como se planteo anteriormente, inicialmente el proyecto estaba pensado para ser desarrollado como un sitio web, sin embargo, durante el desarrollo se opto por la opción de darle un comportamiento de API. esto con el fin de proporcionar una funcionalidad diferente. \\
 Por lo que se puede afirmar que la API no es excluyente de el desarrollo del sitio web. y la implementación mas recomendable dependería de cada usuario final y sus necesidades. Podría trabajarse en la implementación de este sitio web para cubrir una mayor cantidad de usuarios y adaptarse de mejor manera a sus necesidades.\\
 En este sentido, debido a que, ya se había pensado en este desarrollo se tiene una propuesta de como podrían diseñarse las pantallas correspondientes al sitio web por lo menos para el algoritmo KNN además de el mapa de navegación de las mismas. mismas que podrían ser usadas como referencia, o bien, ser utilizadas como tal.\\
@@ -50,7 +50,7 @@ El diseño de pantallas propuesto, vendría directamente de las vistas que ya ti
 	\hypertarget{fig:red}{\hspace{1pt}}
 	\begin{center}
 		\includegraphics[width=.9\textwidth]{capitulo7/images/menu.png}
-		\caption{Agregar Archivo}
+		\caption{Funcionamiento Luminus}
 		\label{fig:agre}
 	\end{center}
 \end{figure}
@@ -158,7 +158,7 @@ Si se alcanza a visualizar la forma en que se pretende presentar este algoritmo,
 	\hypertarget{fig:red}{\hspace{1pt}}
 	\begin{center}
 		\includegraphics[width=.9\textwidth]{capitulo7/images/seleccione.png}
-		\caption{Algoritmos Propuestos}
+		\caption{Ejecutar Algoritmo}
 		\label{fig:seleccione}
 	\end{center}
 \end{figure}
@@ -183,7 +183,7 @@ Nuevamente, si el usuario desea cambiar el tipo de dato, debería ser permitido.
 	\hypertarget{fig:red}{\hspace{1pt}}
 	\begin{center}
 		\includegraphics[width=.9\textwidth]{capitulo7/images/referencia.png}
-		\caption{Selección de atributos}
+		\caption{Valor de Referencia}
 		\label{fig:ref}
 	\end{center}
 \end{figure}
