cambios subir base

--- a/Base.tex
+++ b/Base.tex
@@ -112,6 +112,12 @@
 	%\newpage
 	\cfinput{capitulo4/prototipo2}
 	%
+	\chapter{Algoritmos de Minería de Datos}\label{cap:Cap4.1}
+	\cfinput{capitulo4a/prototipo3}
+	%un comentARIO PARA QUE PAREZCA DIF
+	\chapter{Interface de programación de aplicaciones de Luminus}\label{cap:Cap4.2}
+	\cfinput{capitulo4b/prototipo4}	
+	
 	\chapter{Instalador de Luminus}\label{cap:Cap5}
 	
 	\cfinput{capitulo5/instalador}
